# skimpy

./: .buildinfo  .cookiecutter.json  .flake8  .gitattributes  .gitignore  .nojekyll  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.html  LICENSE.md  LICENSE.rst  Makefile  README.md  README.rst  _quarto.yml  _sidebar.yml  api.html  clean_readme.py  code_of_conduct.html  code_of_conduct.md  code_of_conduct.qmd  codecov.yml  contributing.html  features.html  genindex.html  index.html  index.ipynb  logo.py  noxfile.py  objects.inv  objects.json  pyproject.toml  robots.txt  search.html  search.json  searchindex.js  (+4 more)
.github/: dependabot.yml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
.quarto/_freeze/features/execute-results/: html.json
.quarto/_freeze/index/execute-results/: html.json
.quarto/idx/: code_of_conduct.qmd.json  contributing.qmd.json  features.ipynb.json  index.ipynb.json
.quarto/idx/reference/: clean_columns.qmd.json  generate_test_data.qmd.json  index.qmd.json  skim.qmd.json  skim_polars.qmd.json
.quarto/xref/: 0bb406bd  280f14c4  49de6f6a  598ff647  5cc87e13  8f96dbca  8fc1d089  INDEX  e9fe76da  fb8a1a9c
_modules/: index.html  skimpy.html
_site/: contributing.html  features.html  index.html  search.json
_site/reference/: clean_columns.html  generate_test_data.html  index.html
_sources/: code_of_conduct.md  contributing.md  index.ipynb
_static/: documentation_options.js  styles.css
docs/: CONTRIBUTING.html  LICENSE.html  _config.yml  _quarto.yml  _toc.yml  api.rst  code_of_conduct.html  conf.py  contributing.html  contributing.md  contributing.qmd  features.ipynb  index.html  index.ipynb  index.rst  logo.py  objects.json  reference.rst  requirements.txt  search.json  styles.css  usage.rst
docs/site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
docs/site_libs/quarto-html/: quarto-syntax-highlighting-dark.css  quarto-syntax-highlighting.css
reference/: clean_columns.html  clean_columns.qmd  generate_test_data.html  generate_test_data.qmd  index.html  index.qmd  skim.html  skim.qmd  skim_get_data.html  skim_get_figure.html  skim_polars.html  skim_polars.qmd
site_libs/bootstrap/: bootstrap-04dd6a5ca28aac96903e51a8fbffbcaa.min.css  bootstrap-c1ef1f14acc610acb7f84b3726103d52.min.css  bootstrap-dark.min.css  bootstrap-f93c2b1f3f0577f377aefa4848a86a36.min.css  bootstrap.min.css
skimpy-homepage/: CONTRIBUTING.md  index.ipynb
src/skimpy/: __init__.py  __main__.py  test_panel.py
tests/: __init__.py  test_main.py
