[tool.poetry]
name = "skimpy"
version = "0.0.15"
description = "skimpy"
authors = ["Arthur Turrell"]
license = "MIT"
readme = "README.md"
homepage = "https://aeturrell.github.io/skimpy/"
repository = "https://github.com/aeturrell/skimpy"
documentation = "https://aeturrell.github.io/skimpy/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/aeturrell/skimpy/releases"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
click = "^8.1.6"
rich = ">=10.9,<14.0"
pandas = "^2.0.3"
ipykernel = "^6.7.0"
numpy = ">=1.22.2,<3.0.0"
typeguard = "4.3.0"
polars = { version = ">=0.19.2", optional = true }
typing-extensions = "^4.12.2"
pyarrow = {version = "^17.0.0", optional = true}
deptry = "^0.20.0"

[tool.poetry.scripts]
skimpy = "skimpy.__main__:main"

[tool.poetry.group.dev.dependencies]
nox = ">=2023.4.22,<2025.0.0"
pytest = ">=7.4,<9.0"
coverage = {extras = ["toml"], version = "^7.2"}
mypy = "^1.4"
xdoctest = {extras = ["colors"], version = "^1.1.1"}
pre-commit = "^3.3.1"
pre-commit-hooks = "^4.4.0"
autopep8 = "^2.0.0"
matplotlib = "^3.7.1"
nbstripout = ">=0.6.1,<0.8.0"
toml = "^0.10.2"
typing-extensions = "^4.7.1"
polars = ">=0.19.2"
jupyter = "^1.0.0"
ruff = ">=0.4.1,<0.7.0"
quartodoc = "^0.7.2"
pyarrow = "^17.0.0"

[tool.deptry]
extend_exclude = ["docs", "noxfile.py"]

[tool.deptry.per_rule_ignores]
DEP002 = ["ipykernel", "pyarrow"]
DEP003 = ["skimpy"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["skimpy"]

[tool.coverage.report]
show_missing = true
fail_under = 96

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
disallow_untyped_calls = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
