[project]
name = "skimpy"
version = "0.0.20"
description = "skimpy"
authors = [{name="Arthur Turrell", email="None@none.com"}]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "ipykernel>=6.29.5",
    "numpy>=2.0.2",
    "pandas-stubs>=2.2.2.240807",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "pygments>=2.18.0",
    "rich>=13.9.4",
    "typeguard>=4.4.1",
    "pyarrow>=17.0.0",
    "pydoclint>=0.6.0",
    "duckdb>=1.2.2",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "coverage[toml]>=7.6.9",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "mypy>=1.13.0",
    "nbstripout>=0.8.1",
    "nox>=2024.10.9",
    "pre-commit>=4.0.1",
    "pre-commit-hooks>=5.0.0",
    "pygments>=2.18.0",
    "pytest>=8.3.4",
    "quartodoc>=0.9.1",
    "ruff>=0.8.3",
    "toml>=0.10.2",
    "ty>=0.0.8",
    "typing-extensions>=4.12.2",
    "xdoctest[colors]>=1.2.0",
]

[project.scripts]
skimpy = "skimpy.__main__:main"

[tool.uv]
package = true

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
disallow_untyped_calls = false

[tool.ty.rules]

[tool.ty.src]
exclude = ["tests/", "docs/logo.py"]

[tool.pydoclint]
style = 'google'
exclude = ["noxfile.py", "tests/", "docs/"]
